--- a/FE/duykhanhshop/src/style/pages/_all.scss
+++ b/FE/duykhanhshop/src/style/pages/_all.scss
@@ -30,6 +30,30 @@ body {
     flex: 0 0 50%;
     max-width: 50%;
 }
+.col-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+.col-lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+.col-lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.button_submit{
+    font-size: 14px;
+    color: white;
+    font-weight: 800;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 16px 30px 37px;
+    background: map.get($theme-colors,"main");
+    border: none;
+    height: 100%;
+}
 @include Responsive($DESKTOP){
     .col-xl-3{
         flex: 0 0 25%;
@@ -46,10 +70,29 @@ body {
         max-width: 25%;
     }
 }
-
+@include Responsive($TABLET_DEVICE){
+    .col-md-6{
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .col-md-12{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
 @include Responsive($SMALL_DEVICES){
-    .col-lg-3{
-        flex: 0 0 25%;
-        max-width: 25%;
+    .col-xs-12{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+@include Responsive($WIDE_MOBILE){
+    .col-sm-6{
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .col-sm-12{
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 }
