--- a/FE/duykhanhshop/src/style/pages/_theme.scss
+++ b/FE/duykhanhshop/src/style/pages/_theme.scss
@@ -1,5 +1,5 @@
 //Common theme style
 $theme-colors :(
-    "main": #36454f,
-    "normal-text": #1c1c1c,   
+    "main": red,
+    "normal-text": #000000,   
 )
