--- a/FE/duykhanhshop/src/style/pages/_theme.scss
+++ b/FE/duykhanhshop/src/style/pages/_theme.scss
@@ -1,5 +1,7 @@
 //Common theme style
 $theme-colors :(
-    "main": red,
-    "normal-text": #6b264e,   
+    "main": #007bff,
+    "normal-text": #343a40,
+    "secondary-text":#28a745,
+    "primary-text":#ffc107,
 )
